syntax = "proto3";

package account;

message Account {
  string username = 1;
  string password = 2;
  int32 highScore = 3;
  string account_type = 4;
}

message Empty {}

service AccountService {
  rpc CreateAccount (Account) returns (Empty);
  rpc GetAccount (Account) returns (Account);
}
